Correct spacing on radio buttons

--- a/frontend/styles/edit-submission.less
+++ b/frontend/styles/edit-submission.less
@@ -16,7 +16,7 @@
   max-width: 40em;
 }
 
-.edit-submission .input-section input, .edit-submission .input-section textarea {
+.edit-submission .input-section input[type=text], .edit-submission .input-section textarea {
   width: 50em;
   font-size: 1.6em;
   line-height: 1.5;
